// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "幫您查詢「計程車上有裝悠遊卡感⋯⋯」的相關回應。",
      "type": "text",
    },
    Object {
      "text": "請問下列文章中，哪一篇是您剛才傳送的訊息呢？",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> 計程車上有裝悠遊卡感應器，老人悠悠卡可以

若以上皆非，請打 0。",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:52.41%] 
 計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可以善加利用！=7",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":0,\\"issuedAt\\":1497994017447}",
                "label": "選擇",
                "type": "postback",
              },
            ],
            "text": "這裡沒有一篇是我傳的訊息。",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
      "AVvY-yizyCdS-nWhuYWy",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "幫您查詢「YouTube · ⋯⋯」的相關回應。",
      "type": "text",
    },
    Object {
      "text": "請問下列文章中，哪一篇是您剛才傳送的訊息呢？",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> YouTube  ·  寻找健康人生

選擇請打 2> YouTube
·
寻找健康人生",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:100.00%] 
 YouTube  ·  寻找健康人生",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:100.00%] 
 YouTube
·
寻找健康人生",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`only one article found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1497994017447,
  "replies": undefined,
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle article not found 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "altText": "找不到關於「YouTube · ⋯⋯」訊息耶 QQ

請問您是從哪裡看到這則訊息呢？

請按左下角「⌨️」鈕，輸入「親戚轉傳」、「同事轉傳」、「朋友轉傳」或「自己輸入的」。",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"親戚轉傳\\",\\"issuedAt\\":1497994017447}",
            "label": "親戚轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":\\"同事轉傳\\",\\"issuedAt\\":1497994017447}",
            "label": "同事轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":\\"朋友轉傳\\",\\"issuedAt\\":1497994017447}",
            "label": "朋友轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":\\"自己輸入的\\",\\"issuedAt\\":1497994017447}",
            "label": "自己輸入的",
            "type": "postback",
          },
        ],
        "text": "找不到關於「YouTube · ⋯⋯」訊息耶 QQ
請問您是從哪裡看到這則訊息呢？",
        "type": "buttons",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_ARTICLE_SOURCE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
